--- a/frontend/challenge2/style/style.css
+++ b/frontend/challenge2/style/style.css
@@ -33,7 +33,7 @@ html, body, #root {
 }
 
 #form-header {
-    font-family: Tahoma;
+    font-family: sans-serif;
     color: #444d50;
     font-size: 30px;
 }
@@ -55,7 +55,7 @@ html, body, #root {
     display: flex;
     align-items: center;
     font: bold;
-    font-family: Tahoma;
+    font-family: sans-serif;
     font-size: 35px;
     width: 80%;
     overflow-wrap: break-word;
@@ -100,7 +100,7 @@ html, body, #root {
     }
 
     #form-header {
-        font-family: Tahoma;
+        font-family: sans-serif;
         color: #444d50;
         font-size: 18px;
         text-align: center;
@@ -141,7 +141,7 @@ html, body, #root {
     }
 
     #form-header {
-        font-family: Tahoma;
+        font-family: sans-serif;
         color: #444d50;
         font-size: 18px;
         text-align: center;
