--- a/frontend/challenge2/style/style.css
+++ b/frontend/challenge2/style/style.css
@@ -54,12 +54,14 @@ html, body, #root {
 #banner {
     display: flex;
     align-items: center;
+    justify-content: center;
+    text-align: center;
     font: bold;
     font-family: sans-serif;
     font-size: 35px;
     width: 80%;
     overflow-wrap: break-word;
-    text-align: center;
+    
     height: 130px;
     border: 1px solid#444D50;
     box-shadow: 1px 2px 3px #888888;
